--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
 	"name": "back-n-forth",
 	"displayName": "Back & Forth",
-	"description": "A small extension that adds go back/forward buttons to the UI for easier navigation through recent files, just like in any web browser",
-	"version": "0.1.0",
+	"author": {
+		"name": "Nick Rudenko",
+		"email": "rdnkta@gmail.com"
+	},
+	"repository": {
+		"url": "https://github.com/nick-rudenko/back-n-forth"
+	},
+	"keywords": [
+		"navigaton",
+		"buttons",
+		"browser"
+	],
+	"icon": "img/icons/icon.png",
+	"publisher": "nick-rudenko",
+	"description": "Adds go back/forward buttons for easier navigation",
+	"version": "0.1.1",
 	"engines": {
 		"vscode": "^1.37.0"
 	},
@@ -20,16 +34,16 @@
 				"command": "extension.showBackBtn",
 				"title": "Go Back",
 				"icon": {
-					"dark": "icons/arrow-left-dark.svg",
-					"light": "icons/arrow-left-light.svg"
+					"dark": "img/svg/arrow-left-dark.svg",
+					"light": "img/svg/arrow-left-light.svg"
 				}
 			},
 			{
 				"command": "extension.showForwardBtn",
 				"title": "Go Forward",
 				"icon": {
-					"dark": "icons/arrow-right-dark.svg",
-					"light": "icons/arrow-right-light.svg"
+					"dark": "img/svg/arrow-right-dark.svg",
+					"light": "img/svg/arrow-right-light.svg"
 				}
 			}
 		],
@@ -45,23 +59,23 @@
 				}
 			]
 		}
-},
-"scripts": {
-	"vscode:prepublish": "npm run compile",
-	"compile": "tsc -p ./",
-	"watch": "tsc -watch -p ./",
-	"pretest": "npm run compile",
-	"test": "node ./out/test/runTest.js"
-},
-"devDependencies": {
-	"@types/glob": "^7.1.1",
-	"@types/mocha": "^5.2.6",
-	"@types/node": "^10.12.21",
-	"@types/vscode": "^1.37.0",
-	"glob": "^7.1.4",
-	"mocha": "^6.1.4",
-	"typescript": "^3.3.1",
-	"tslint": "^5.12.1",
-	"vscode-test": "^1.0.2"
-}
+	},
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"pretest": "npm run compile",
+		"test": "node ./out/test/runTest.js"
+	},
+	"devDependencies": {
+		"@types/glob": "^7.1.1",
+		"@types/mocha": "^5.2.6",
+		"@types/node": "^10.12.21",
+		"@types/vscode": "^1.37.0",
+		"glob": "^7.1.4",
+		"mocha": "^6.1.4",
+		"typescript": "^3.3.1",
+		"tslint": "^5.12.1",
+		"vscode-test": "^1.0.2"
+	}
 }
