Fix keyword typo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"url": "https://github.com/nick-rudenko/back-n-forth"
 	},
 	"keywords": [
-		"navigaton",
+		"navigation",
 		"buttons",
 		"browser"
 	],
