--- a/package.json
+++ b/package.json
@@ -60,10 +60,36 @@
 					"dark": "/img/svg/chevrons/chevron-right-dark.svg",
 					"light": "/img/svg/chevrons/chevron-right-light.svg"
 				}
+			},
+			{
+				"command": "extension.arrowToLastEditLocationBtn",
+				"title": "Go to Last Edit Location",
+				"icon": {
+					"dark": "/img/svg/arrows/arrow-left-asterisk-dark.svg",
+					"light": "/img/svg/arrows/arrow-left-asterisk-light.svg"
+				}
+			},
+			{
+				"command": "extension.chevronToLastEditLocationBtn",
+				"title": "Go to Last Edit Location",
+				"icon": {
+					"dark": "/img/svg/chevrons/chevron-left-asterisk-dark.svg",
+					"light": "/img/svg/chevrons/chevron-left-asterisk-light.svg"
+				}
 			}
 		],
 		"menus": {
 			"editor/title": [
+				{
+					"command": "extension.arrowToLastEditLocationBtn",
+					"group": "navigation@999997",
+					"when": "config.back-n-forth.iconStyle == 'arrow' && config.back-n-forth.withLastEditLocation == true"
+				},
+				{
+					"command": "extension.chevronToLastEditLocationBtn",
+					"group": "navigation@999997",
+					"when": "config.back-n-forth.iconStyle == 'chevron' && config.back-n-forth.withLastEditLocation == true"
+				},
 				{
 					"command": "extension.arrowBackBtn",
 					"group": "navigation@999998",
@@ -96,6 +122,11 @@
 						"arrow",
 						"chevron"
 					]
+				},
+				"back-n-forth.withLastEditLocation": {
+					"type": "boolean",
+					"default": false,
+					"description": "Adds an additional icon that returns to the last edit location"
 				}
 			}
 		}
