--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"name": "Nick Rudenko",
 		"email": "rdnkta@gmail.com"
 	},
+	"license": "MIT",
 	"repository": {
 		"url": "https://github.com/nick-rudenko/back-n-forth"
 	},
@@ -139,15 +140,15 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/glob": "^7.1.1",
+		"@types/glob": "^7.1.3",
 		"@types/mocha": "^5.2.6",
-		"@types/node": "^10.12.21",
-		"@types/vscode": "^1.37.0",
-		"glob": "^7.1.4",
-		"mocha": "^7.1.2",
-		"tslint": "^5.12.1",
-		"typescript": "^3.3.1",
-		"vscode-test": "^1.0.2"
+		"@types/node": "^10.17.28",
+		"@types/vscode": "^1.47.0",
+		"glob": "^7.1.6",
+		"mocha": "^7.2.0",
+		"tslint": "^5.20.1",
+		"typescript": "^3.9.7",
+		"vscode-test": "^1.4.0"
 	},
 	"dependencies": {}
 }
